core: use a mutable list for parameters
Immutable lists cannot be deserialized.

Signed-off-by: Benny Zlotnik <bzlotnik@redhat.com>
Change-Id: I34929e59b04afe3adbde38c41d88222383a14d02